--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jade": "~1.11.0",
     "mongoose": "^5.8.5",
     "morgan": "~1.9.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
