--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^5.8.5",
     "morgan": "~1.9.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
