--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "test": "mocha --exit --timeout 5000"
+    "test": "mocha --exit --timeout 30000"
   },
   "dependencies": {
     "chai": "^4.2.0",
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mocha": "^7.0.0",
+    "mockgoose": "^8.0.4",
     "mongoose": "^5.8.5",
     "morgan": "~1.9.0",
     "request": "^2.88.0",
